--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,8 @@
-name = "develocity"
-compatibility_date = "2023-12-01"
+name = "devvelocity"
+compatibility_date = "2024-11-20"
 
-# Cloudflare Pages uses this directory after build
+# Required for Cloudflare Pages to recognize this as a project using Functions
 pages_build_output_dir = ".next"
+
+[build]
+command = "npm run build"
