--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,11 +2,8 @@ name = "devvelocity"
 compatibility_date = "2023-10-01"
 pages_build_output_dir = ".vercel/output/static"
 
-# REQUIRED FOR NEXT.JS ON CLOUDFLARE PAGES
+# Required for Next.js on Cloudflare Pages
 compatibility_flags = ["nodejs_compat"]
 
 [vars]
 NODE_ENV = "production"
-
-[observability]
-logs = { enabled = true }
