--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "react": "18.2.0",
   "react-dom": "18.2.0",
   "react-icons": "4.12.0"
+  "@supabase/supabase-js": "^2.39.7",
 },
   "devDependencies": {
     "@types/node": "^20.0.0",
