--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,8 @@
 name = "devvelocity"
-
-compatibility_date = "2024-01-01"
-compatibility_flags = ["nodejs_compat"]
+compatibility_flags = [ "nodejs_compat" ]
 
 [build]
 command = "npm run build"
-cwd = "/"
-watch_dir = "/"
-
-[build.environment]
-NODE_VERSION = "18"
-
-[site]
-bucket = ".vercel/output/static"
-entry-point = "."
+cwd = "."
+watch_dir = "."
+pages_build_output_dir = ".vercel/output/static"
