--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "devvelocity",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "opennext build",
+    "start": "opennext start"
   },
   "dependencies": {
-  "next": "14.1.0",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "react-icons": "4.12.0"
-  "@supabase/supabase-js": "^2.39.7",
-},
+    "@opennextjs/cloudflare": "latest",
+    "@supabase/supabase-js": "^2.42.4",
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.12.0"
+  },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "typescript": "^5.4.2",
+    "postcss": "8.4.31",
+    "autoprefixer": "10.4.16",
+    "tailwindcss": "3.4.1"
   }
 }
