--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "opennext build",
-    "start": "opennext start"
+    "build": "open-next build",
+    "start": "open-next start"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "latest",
-    "@supabase/supabase-js": "^2.42.4",
+    "@supabase/supabase-js": "^2.39.8",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
-    "postcss": "8.4.31",
-    "autoprefixer": "10.4.16",
-    "tailwindcss": "3.4.1"
+    "open-next": "3.0.3",
+    "typescript": "^5.3.3"
   }
 }
