--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,5 +2,4 @@ name = "devvelocity"
 compatibility_date = "2024-10-01"
 
 [pages]
-route = "*"
-build_output_dir = ".vercel/output/static"
+build_output_dir = ".open-next"
