--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "open-next build",
-    "start": "open-next start"
+    "build": "next build",
+    "opennext:build": "opennext build",
+    "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.8",
+    "@supabase/supabase-js": "^2.39.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "open-next": "3.0.3",
-    "typescript": "^5.3.3"
+    "@opennext/cf": "0.4.0",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
