--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,2 +1,13 @@
 name = "devvelocity"
-pages_build_output_dir = ".open-next"
+compatibility_date = "2023-10-01"
+pages_build_output_dir = ".vercel/output/static"
+
+# Required for Next.js on Cloudflare Pages
+compatibility_flags = ["nodejs_compat"]
+
+[vars]
+NODE_ENV = "production"
+
+# Enable logs on Cloudflare
+[observability]
+logs = { enabled = true }
