--- a/package.json
+++ b/package.json
@@ -4,26 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npx @cloudflare/next-on-pages@1",
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.7.5",
-    "@supabase/auth-helpers-react": "^0.4.5",
-    "@supabase/supabase-js": "^2.45.0",
-    "lemon-squeezy-js": "^1.0.0",
-    "next": "14.2.4",
-    "open-next": "^3.7.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.2"
+    "@supabase/auth-helpers-nextjs": "0.7.4",
+    "@supabase/supabase-js": "^2.46.1",
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
