--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Generate package-lock
+name: Generate package-lock.json
 
 on:
   workflow_dispatch:
@@ -6,15 +6,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Use Node 18
+        uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - name: Install dependencies
         run: npm install
-      - name: Upload package-lock.json
-        uses: actions/upload-artifact@v3
-        with:
-          name: package-lock
-          path: package-lock.json
+
+      - name: Commit package-lock.json
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add package-lock.json
+          git commit -m "Auto-generate package-lock.json" || echo "No changes"
+          git push
