--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx @cloudflare/next-on-pages@1 build",
-    "preview": "npx @cloudflare/next-on-pages@1 preview",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
