--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,7 @@
 name = "devvelocity"
+compatibility_date = "2024-01-01"
 
-[pages]
 pages_build_output_dir = ".vercel/output/static"
+
+[build]
+command = "npm run build"
