--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,8 @@
 name = "devvelocity"
 compatibility_date = "2024-01-01"
 
-pages_build_output_dir = ".vercel/output/static"
+# Required for Cloudflare Pages + Next.js via next-on-pages
+build_output_dir = ".vercel/output/static"
 
 [build]
 command = "npm run build"
