--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0"
   }
