--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,4 @@
 name = "devvelocity"
 compatibility_date = "2024-11-25"
 
-pages_build_output_dir = "./.vercel/output/static"
-
-[build]
-command = "npx @cloudflare/next-on-pages@1 build"
+pages_build_output_dir = ".vercel/output/static"
