--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Commit updated lockfile
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
           git add package-lock.json
           git commit -m "Auto-generate synchronized lockfile" || echo "No changes to commit"
           git push
