--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install dependencies to update lockfile
+      - name: Install dependencies (updates lockfile)
         run: npm install
 
       - name: Commit updated lockfile
@@ -24,5 +24,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add package-lock.json
-          git commit -m "Auto-generate synchronized lockfile" || echo "No changes"
+          git commit -m "Auto-generate synchronized lockfile" || echo "No changes to commit"
           git push
