--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -24,17 +24,16 @@ jobs:
       - name: Install dependencies normally (updates lockfile)
         run: npm install
 
-      - name: Commit & push updated lockfile (force-safe)
+      - name: Commit & push updated lockfile (rebasing first)
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          # Pull latest & rebase safely
+          # This is what your workflow is *missing*
           git fetch origin main
           git pull origin main --rebase --autostash || true
 
           git add package-lock.json
           git commit -m "Auto-generate synchronized lockfile" || echo "No changes to commit"
 
-          # Force-with-lease = safe push (won’t overwrite remote work)
           git push origin main --force-with-lease
