--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -29,11 +29,10 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          # This is what your workflow is *missing*
           git fetch origin main
           git pull origin main --rebase --autostash || true
 
           git add package-lock.json
-          git commit -m "Auto-generate synchronized lockfile" || echo "No changes to commit"
+          git commit -m "Auto-generate synchronized lockfile" || echo "No changes"
 
           git push origin main --force-with-lease
