--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -6,11 +6,12 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0   # IMPORTANT – get entire history
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -20,7 +21,7 @@ jobs:
       - name: Install dependencies (updates lockfile)
         run: npm install
 
-      - name: Commit updated lockfile
+      - name: Commit and force-push updated lockfile
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
@@ -28,6 +29,7 @@ jobs:
           git add package-lock.json
           git commit -m "Auto-generate synchronized lockfile" || echo "No changes"
 
+          # NEW REQUIRED FIXES:
           git fetch origin main
           git rebase origin/main || git rebase --abort
 
