--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -30,6 +30,6 @@ jobs:
           git commit -m "Auto-generate synchronized lockfile" || echo "No changes"
 
           git fetch origin main
-          git rebase origin/main || git rebase --abort
-
+          git pull origin main --rebase || true
+          
           git push origin HEAD:main --force
