--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -3,12 +3,15 @@ name: Generate Correct Lockfile
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout (full history)
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -18,18 +21,24 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install dependencies (updates lockfile)
+      - name: Install dependencies and update lockfile
         run: npm install
 
-      - name: Commit and force-push updated lockfile
+      - name: Configure Git identity
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          git add package-lock.json
-          git commit -m "Auto-generate synchronized lockfile" || echo "No changes"
-
+      - name: Pull remote changes (required to push)
+        run: |
           git fetch origin main
           git pull origin main --rebase || true
-          
-          git push origin HEAD:main --force
+
+      - name: Commit updated lockfile
+        run: |
+          git add package-lock.json
+          git commit -m "Auto-generate synchronized lockfile" || true
+
+      - name: Push changes
+        run: |
+          git push origin main --force
