--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -5,7 +5,6 @@ on:
 
 permissions:
   contents: write
-  workflows: write
 
 jobs:
   generate:
@@ -30,9 +29,8 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-      - name: Pull main
+      - name: Pull latest
         run: |
-          git fetch origin main
           git pull origin main --rebase || true
 
       - name: Commit updated lockfile
@@ -42,4 +40,4 @@ jobs:
 
       - name: Push changes
         run: |
-          git push origin main --force
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@githu
