--- a/.github/workflows/generate-lockfile.yml
+++ b/.github/workflows/generate-lockfile.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           fetch-depth: 0
 
+      # 🔥 Hard reset — guarantees the workflow always starts clean
       - name: Hard reset to remote main
         run: |
           git fetch origin main
@@ -27,7 +28,7 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install dependencies (creates lockfile)
+      - name: Install dependencies and generate lockfile
         run: npm install
 
       - name: Configure git identity
@@ -35,11 +36,11 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-      - name: Commit lockfile
+      - name: Commit updated lockfile
         run: |
           git add package-lock.json
-          git commit -m "Auto-generate synchronized lockfile" || true
+          git commit -m "Auto-generate synchronized lockfile" || echo "No changes to commit"
 
-      - name: Push changes
+      - name: Push updated lockfile
         run: |
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} main:main --force
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} main --force
