--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "postcss": "8.4.31",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
-  }
+  },
+  "dependencies": {
+  "@supabase/supabase-js": "2.39.0",
+  "@supabase/auth-helpers-nextjs": "0.8.2",
+  "react-icons": "4.12.0",
+  "next": "14.2.3",
+  "react": "18.3.1",
+  "react-dom": "18.3.1"
 }
