--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "10.4.16",
     "postcss": "8.4.31",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0"
   }
 }
