--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "2.39.0",
-    "@supabase/auth-helpers-nextjs": "0.8.2",
-    "react-icons": "4.12.0",
+    "@supabase/ssr": "^0.5.0",
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "5.2.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.31",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0"
+    "typescript": "5.3.3"
   }
 }
