--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,3 @@
 name = "devvelocity"
 compatibility_date = "2024-11-25"
-
-# This allows Cloudflare Pages to deploy Next.js correctly
-[pages]
-build_output_dir = ".vercel/output/static"
-
-[build]
-command = "npx @cloudflare/next-on-pages@1"
+pages_build_output_dir = ".vercel/output"
