--- a/workers/cron/wrangler.toml
+++ b/workers/cron/wrangler.toml
@@ -2,9 +2,11 @@ name = "devvelocity-billing-sync"
 main = "billing-sync.ts"
 compatibility_date = "2024-11-25"
 
+# CRON JOB (runs every 15 minutes)
 [triggers]
 crons = ["*/15 * * * *"]
 
+# ENV VARS for Billing Sync
 [vars]
 SUPABASE_URL = ""
 SUPABASE_SERVICE_KEY = ""
