--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-     "dev": "next dev",
-     "build": "next build",
-     "start": "next start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@supabase/supabase-js": "2.45.0",
@@ -13,7 +13,9 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "5.2.1"
+    "react-icons": "5.2.1",
+
+    "react-syntax-highlighter": "15.5.0"
   },
   "devDependencies": {
     "@types/react": "18.2.48",
