--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
-    "react-syntax-highlighter": "15.5.0",
-    "openai": "4.52.0"
+
+    /* 🔥 NEW: Required for AI Builder */
+    "openai": "4.33.0",
+    "react-syntax-highlighter": "15.5.0"
   },
   "devDependencies": {
     "@types/react": "18.2.48",
